# SciLib

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.gitignore/: test.py  test_scilib.py
data/constants/: speed_of_light.json
data/schema/: constants.schema.json
python/: README.md  __init__.py  convert_angle_units.py  gradtoradions.py  pyproject.toml  setup.py
python/src/scilib/: config.py  convert_angle_units.py
python/src/scilib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
