# SciLib/pyproject.toml (REPO-ROOT!)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Wheel (Production)
[tool.hatch.build.targets.wheel]
packages = ["python/src/scilib"]     # ← Von ROOT!
include = [
  "/data",
  "/data/constants/*.json"
]
# SDist (Source)
[tool.hatch.build.targets.sdist]
include = [
  "python/src/scilib",
  "data/constants",                  # ← data/ ins SDist!
  "README.md",
  "LICENSE"
]

[project]
name = "scilib"
version = "0.1.0"
description = "High-Precision scientific calculations"
requires-python = ">=3.8"
dependencies = ["numpy", "gmpy2>=2.1.0"]

# Usage:
# pip install scilib                    → Basic (float fallback)
# pip install "scilib[precision]"       → High-Precision (gmpy2)






