# SciLib/pyproject.toml (REPO-ROOT!)
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.setuptools.package-data]
"scilib" = ["data/**/*"]


[project]
name = "scilib"
version = "0.1.0"
description = "High-Precision scientific calculations"
requires-python = ">=3.8"
dependencies = ["numpy", "gmpy2>=2.1.0"]

# Usage:
# pip install scilib                    → Basic (float fallback)
# pip install "scilib[precision]"       → High-Precision (gmpy2)






