[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scilib"
version = "0.1.0"
description = "High-Precision scientific calculations"
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.optional-dependencies]
precision = ["gmpy2>=2.1.0"]
dev = ["pytest", "black"]

[project.urls]
Homepage = "https://github.com/SamsonandDelilah/SciLib"

