# SciLib/pyproject.toml (REPO-ROOT!)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scilib"]
include = ["/data"]

[project]
name = "scilib"
version = "0.1.0"
description = "High-Precision scientific calculations"
requires-python = ">=3.8"
dependencies = ["numpy", "gmpy2>=2.1.0"]


[project.optional-dependencies]
dev = ["pytest", "black"]
data = ["importlib_resources"]          # Production data loader

# Usage:
# pip install scilib                    → Basic (float fallback)
# pip install "scilib[precision]"       → High-Precision (gmpy2)






